2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b169

	* Bug 1000425: Use 'deleteButton' instead of 'delete' because
	  of a JS keyword

2004-09-08  Christian Mohn <h0bbel@p0ggel.org>  1.4.5-cvs-b168

        * Fix: Closing bold tag in displayPhotoFields  

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b167

	* Change: Remove duplicate and unused options from despam-comments

2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b166

	* Change: De-globalize gallery_remote2

	* Fix: function typo in despam-comments

	* Change: Use dirname(dirname()) instead of '../' in build_manifest

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b165

	* Change:  Remove session_register(), which is deprecated (and not
	  necessary, since we use $_SESSION)

	* Change:  save_photos - Don't save the album if there were 0 photos
	  uploaded.

2004-09-07  Andrew Lindeman <alindeman@users.sf.net>    1.4.5-cvs-b164
	
	* Prevent a possible PHP error (pedantic)

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b163

	* Fix: Incorrect function pluralization

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b162

	* Fix: De-globalize find_orphans

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b161

	* Fix: I brokeded the config wizard.  Now working and de-globalized

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b160

	* Fix: Add register_globals check to config wizard

	* Fix: De-globalize login.inc

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b159

	* Fix: De-globalize delete_album and new_password

2004-09-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b158

	* Fix: Initial commit of the gallery-wide conversion away from
	  register_globals. This commit does not address 100% of the
	  codebase, however it covers everything that I found in general
	  use.  There will be broken sections, and it does need lots of