@@ -31,7 +31,8 @@ if (!$gallery->user->canAddComments($gallery->album)) {
         exit;
 }
 
-list($save, $commenter_name, $comment_text) = getRequestVar(array('save', 'commenter_name', 'comment_text'));
+list($save, $id, $commenter_name, $comment_text) = getRequestVar(array('save', 'id', 'commenter_name', 'comment_text'));
+
 $error_text = "";
 if ($gallery->user->isLoggedIn() ) {
 	if (empty($commenter_name) || $gallery->app->comments_anonymous == 'no') {
