@@ -1,3 +1,10 @@
+2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b170
+
+	* Fix: Bug in view_photo prevented inline comments from operating
+	  if the user didn't have View Full rights.
+
+	* Fix: Add missing var to add_comments.php
+
 2004-09-08  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b169
 
 	* Bug 1000425: Use 'deleteButton' instead of 'delete' because
